# TCamera

./: readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tainzhi/android/tcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bitmap.cpp  capture.cpp  cl-processor.cpp  cpu-processor.cpp  engine.cpp  filter.cpp  image-processor-jni.cpp  image-processor.cpp  listener.cpp  looper.cpp  native-engine-jni.cpp  native-lib.cpp  opencv-jni.cpp  thread.cpp  util.cpp  watermark.cpp
app/src/main/cpp/include/: bitmap.h  capture.h  cl-processor.h  color.h  cpu-processor.h  engine.h  filter.h  image-processor.h  listener.h  looper.h  processor.h  thread.h  util.h  vulkan-processor.h  watermark.h  yuv.h
app/src/main/cpp/libs/opencl/: readme.md
app/src/main/cpp/libs/opencl/src/: CMakeLists.txt  README.md
app/src/main/java/com/tainzhi/android/tcamera/: App.kt  CameraInfoCache.kt  CameraPreviewRender.kt  CameraPreviewView.kt  CaptureJob.kt  ConfirmationDialog.kt  ErrorDialog.kt  GLSurfaceView.java  ImageProcessor.kt  ImageSaver.kt  MainActivity.kt  MediaSaver.kt  SettingsActivity.kt
app/src/main/java/com/tainzhi/android/tcamera/gl/: EglUtil.kt  GlUtil.kt  Shader.kt
app/src/main/java/com/tainzhi/android/tcamera/gl/textures/: BlurPreviewTexture.kt  CircularArcTexture.kt  GridLine.kt  LineTexture.kt  PreviewTexture.kt  Texture.kt  TextureManager.kt  Vertex2F.kt  Vertex3F.kt
app/src/main/java/com/tainzhi/android/tcamera/ui/: CameraPreviewRender.kt  CameraPreviewView.kt  CircleImageView.java  ConfirmationDialog.kt  ControlBar.kt  ErrorDialog.kt  FilterBar.kt  GLSurfaceView.java  VideoIndicator.kt
app/src/main/java/com/tainzhi/android/tcamera/util/: ActivityExtentions.kt  ColorUtil.java  ColorUtil.kt  FileUtil.kt  Kpi.kt  RotationChangeListener.kt  SettingsManager.kt
app/src/main/kotlin/com/tainzhi/android/tcamera/: CameraPreviewRender.kt  CameraPreviewView.kt  Constants.kt  MainActivity.kt
app/src/main/kotlin/com/tainzhi/android/tcamera/ui/: CircleImageView.kt
app/src/main/kotlin/com/tainzhi/android/tcamera/util/: FileUtil.kt  SettingsManager.kt
app/src/main/res/color/: surface_dark_medium.xml
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_red_circle.xml  ic_video_light.xml
app/src/main/res/layout/: activity_main.xml  vstub_video_recording_indicator.xml
app/src/main/res/raw/: preview_fs.frag
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/tainzhi/android/tcamera/: ExampleUnitTest.kt
cert/: android.keystore
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
